# aitt

./: CMakeLists.txt
android/aitt/: build.gradle
android/aitt/src/main/java/com/samsung/android/aitt/: Aitt.java
android/aitt/src/main/jni/: aitt_jni.cc
android/aitt/src/test/java/com/samsung/android/aitt/: AittUnitTest.java  ShadowAitt.java
android/modules/webrtc/: build.gradle
android/modules/webrtc/src/main/java/com/samsung/android/modules/webrtc/: WebRTC.java  WebRTCServer.java
common/: AittDiscovery.cc  CMakeLists.txt  MQ.cc  MQ.h  aitt_internal_definitions.h
include/: AITT.h  AittTypes.h  TransportModule.h  aitt_c.h
include/internal/: aitt_internal_definitions.h
mock/: mosquitto.cc
modules/srtp/: NetUtil.cc  SRTP.cc  UDP.cc
modules/srtp/samples/: srtp_test.cc  udp_simple_test.cc  udp_test.cc
modules/tcp/: CMakeLists.txt  Module.cc  Module.h
modules/tcp/samples/: tcp_test.cc
modules/webrtc/: CMakeLists.txt  CameraHandler.cc  Config.h  Module.cc  Module.h  MqttServer.cc  MqttServer.h  PublishStream.cc  SubscribeStream.cc  SubscribeStream.h  WebRtcMessage.cc  WebRtcPeer.cc  WebRtcPeer.h  WebRtcRoom.cc  WebRtcStream.cc  main.cc
modules/webrtc/tests/: CMakeLists.txt  WEBRTC_test.cc
packaging/: aitt.spec
src/: AITT.cc  AITTImpl.cc  AITTImpl.h  MQ.cc  MQ.h  TransportModuleLoader.cc  TransportModuleLoader.h  aitt_c.cc
tests/: AITT_TCP_test.cc  AITT_manualtest.cc  AITT_test.cc  CMakeLists.txt  MQ_mocktest.cc  MQ_test.cc  MainLoopHandler_test.cc  RequestResponse_test.cc  TransportModuleLoader_test.cc  aitt_c_manualtest.cc  aitt_c_test.cc
tools/: android_env.sh
