FILE(GLOB COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

ADD_LIBRARY(${AITT_COMMON} SHARED ${COMMON_SRCS})
IF(PLATFORM STREQUAL "android")
	TARGET_LINK_LIBRARIES(${AITT_COMMON} ${GLIB_LIBRARIES} ${MOSQUITTO_LIBRARY})
ELSE(PLATFORM STREQUAL "android")
	TARGET_LINK_LIBRARIES(${AITT_COMMON} ${AITT_NEEDS_LIBRARIES})
ENDIF(PLATFORM STREQUAL "android")
TARGET_COMPILE_OPTIONS(${AITT_COMMON} PUBLIC ${AITT_NEEDS_CFLAGS_OTHER} "-fvisibility=default")
IF(VERSIONING)
	SET_TARGET_PROPERTIES(${AITT_COMMON} PROPERTIES
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION_MAJOR}
		)
ENDIF(VERSIONING)
INSTALL(TARGETS ${AITT_COMMON} DESTINATION ${LIB_INSTALL_DIR})
