SET(AITT_WEBRTC aitt-transport-webrtc)

PKG_CHECK_MODULES(AITT_WEBRTC_NEEDS REQUIRED
    ${PKGS}
    bundle
    capi-media-tool
    capi-media-sound-manager
    capi-media-camera
    capi-media-webrtc
    flatbuffers
    glib-2.0
    json-glib-1.0
    libmosquitto
    libsoup-2.4
)

INCLUDE_DIRECTORIES(${AITT_WEBRTC_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${AITT_WEBRTC_NEEDS_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB AITT_WEBRTC_SRC *.cc)
ADD_LIBRARY(${AITT_WEBRTC} SHARED ${AITT_WEBRTC_SRC})
TARGET_LINK_LIBRARIES(${AITT_WEBRTC} ${AITT_WEBRTC_NEEDS_LIBRARIES} aitt Threads::Threads ${CMAKE_DL_LIBS})
TARGET_COMPILE_OPTIONS(${AITT_WEBRTC} PUBLIC ${AITT_WEBRTC_NEEDS_CFLAGS_OTHER})

INSTALL(TARGETS ${AITT_WEBRTC} DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTING)
