ADD_DEFINITIONS(-DLOG_STDOUT)

PKG_CHECK_MODULES(UT_NEEDS REQUIRED gmock_main)
INCLUDE_DIRECTORIES(${UT_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${UT_NEEDS_LIBRARY_DIRS})

SET(AITT_WEBRTC_UT ${PROJECT_NAME}_webrtc_ut)

SET(AITT_WEBRTC_UT_SRC WEBRTC_test.cc)

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/modules/webrtc WEBRTC_MODULE_SRCS)
list(REMOVE_ITEM WEBRTC_MODULE_SRCS ${CMAKE_SOURCE_DIR}/modules/webrtc/main.cc ${CMAKE_SOURCE_DIR}/modules/webrtc/Module.cc)

ADD_EXECUTABLE(${AITT_WEBRTC_UT} ${AITT_WEBRTC_UT_SRC} ${WEBRTC_MODULE_SRCS})
TARGET_LINK_LIBRARIES(${AITT_WEBRTC_UT} ${UT_NEEDS_LIBRARIES} Threads::Threads ${AITT_WEBRTC_NEEDS_LIBRARIES})
INSTALL(TARGETS ${AITT_WEBRTC_UT} DESTINATION ${AITT_TEST_BINDIR})

ADD_TEST(
    NAME
        ${AITT_WEBRTC_UT}
    COMMAND
        ${CMAKE_COMMAND} -E env
        ${CMAKE_CURRENT_BINARY_DIR}/${AITT_WEBRTC_UT} --gtest_filter=*_Anytime
)
